gcc/testsuite/gfortran.dg/pr66979.f90
! { dg-do compile }
! PR fortran/66979
program p
  implicit none
  integer::i
  flush (iostat=i) ! { dg-error "UNIT number missing" }
end program p
